--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+// src/pages/index.astro
+import ExtendedLayout from "@/layouts/ExtendedLayout.astro";
+import Section from "@/components/Section.astro";
+import PrimaryHero from "@/components/StaticSections/PrimaryHero.astro";
+import { SiteData } from "@/content/SiteData";
 ---
+<ExtendedLayout title="Welcome to Astro!" description="Your gateway to amazing projects.">
+  <!-- Hero Section -->
+  <PrimaryHero title={SiteData.title} description={SiteData.description} />
 
-<Layout>
-	<Welcome />
-</Layout>
+
+  <!-- Clients -->
+  <Section
+    sectionClass="animate-on-appear"
+    collection="clients"
+    query="getAll"
+    heading={{ text: "Our Clients", tagName: "h2" }}
+  />
+
+
+</ExtendedLayout>
