--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -53,7 +53,7 @@ const breakpoint = "lg";
     }}
     isHierarchical={true}
   />
-  <Button variant="primary" href={`tel:${ContactData.phone}`}>Call Us: {ContactData.phone}</Button>
+  <Button variant="primary" href={`tel:${ContactData.phone}`}>{ContactData.phone}</Button>
   </div>
 
 </header>
