--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@
 body {
   font-family: var(--font-base);
   background-color: var(--color-bg);
-  color: var(--color-text);
+  /* color: var(--color-text); */
 }
 
 /* Container for centered layouts */
@@ -53,22 +53,22 @@ body {
 
 /* Global header styles (these are our dynamic header classes) */
 .h1 {
-  @apply text-2xl font-bold text-[var(--color-text)];
+  @apply text-5xl font-bold;
 }
 .h2 {
-  @apply text-2xl font-semibold text-[var(--color-text)];
+  @apply text-4xl font-semibold;
 }
 .h3 {
-  @apply text-xl font-semibold text-[var(--color-text)] md:text-2xl;
+  @apply text-2xl font-semibold md:text-2xl;
 }
 .h4 {
-  @apply text-lg font-medium text-[var(--color-text)] md:text-xl;
+  @apply text-lg font-medium md:text-xl;
 }
 .h5 {
-  @apply text-base font-medium text-[var(--color-text)] md:text-lg;
+  @apply text-base font-medium md:text-lg;
 }
 .h6 {
-  @apply text-base font-medium text-[var(--color-text)] md:text-lg;
+  @apply text-base font-medium md:text-lg;
 }
 p {
     @apply mb-4 leading-relaxed text-base;
