--- a/src/components/StaticSections/PrimaryHero.astro
+++ b/src/components/StaticSections/PrimaryHero.astro
@@ -22,7 +22,7 @@ import { Image } from "astro:assets";
     // overlayClass: "bg-black opacity-50",
   }}
     headingAreaClass="flex flex-col items-center justify-center text-center"
-    sectionClass="min-h-[100vh] md:min-h-[200vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
+    sectionClass="min-h-[100vh] md:min-h-[200vh] flex items-center lg:items-start justify-center z-100 text-bg bg-[#2b2b2b] text-center"
     contentClass="flex flex-col-reverse flex justify-center items-center md:min-h-[90vh] w-7/10"
     buttonsSectionClass="mt-[var(--spacing-xl)]"
     childSlotClass="order-1 text-center md:text-left flex justify-center items-center"
