--- a/src/layouts/Theme.astro
+++ b/src/layouts/Theme.astro
@@ -3,6 +3,6 @@
 import '../styles/global.css';
 ---
 <!-- You may include additional theme-related meta tags here -->
-<meta name="theme-color" content="#0000FE" />
+<meta name="theme-color" content="#ff6100" />
 <meta name="apple-mobile-web-app-status-bar-style" content="#ff6100" />
 <link rel="icon" href="/solartrusticon.png" type="image/x-icon" />
