--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,9 @@ import { SiteData } from "@/content/SiteData";
   <!-- Hero Section -->
   <PrimaryHero title={SiteData.title} description={SiteData.description} />
 
+  <Section>
+    
+  </Section>
 
   <!-- Clients -->
   <Section
