--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,8 @@
   /* Colors */
   --color-bg: #ffffff;
   --color-bg-dark: #2b2b2b;
-  --color-text: #111111;
+  --color-text: rgba(112,112,112,0.83);
+  --color-heading: #ffff;
   --color-primary: #ff6100;
   --color-secondary: #f43f5e;
   --color-accent: #10b981;
@@ -53,16 +54,16 @@ body {
 
 /* Global header styles (these are our dynamic header classes) */
 .h1 {
-  @apply text-5xl font-bold;
+  @apply text-3xl lg:text-5xl font-bold;
 }
 .h2 {
-  @apply text-4xl font-semibold;
+  @apply text-3xl lg:text-4xl font-semibold;
 }
 .h3 {
-  @apply text-2xl font-semibold md:text-2xl;
+  @apply text-xl lg:text-2xl font-semibold md:text-2xl;
 }
 .h4 {
-  @apply text-lg font-medium md:text-xl;
+  @apply text-lg lg:text-xl font-medium md:text-xl;
 }
 .h5 {
   @apply text-base font-medium md:text-lg;
