--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -41,6 +41,7 @@
 body {
   font-family: var(--font-base);
   background-color: var(--color-bg);
+  overflow-x: hidden;
   /* color: var(--color-text); */
 }
 
