--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,23 @@
 import ExtendedLayout from "@/layouts/ExtendedLayout.astro";
 import Section from "@/components/Section.astro";
 import PrimaryHero from "@/components/StaticSections/PrimaryHero.astro";
+import HeroBg from "@/assets/background.svg";
 import { SiteData } from "@/content/SiteData";
 ---
 <ExtendedLayout title="Welcome to Astro!" description="Your gateway to amazing projects.">
   <!-- Hero Section -->
   <PrimaryHero title={SiteData.title} description={SiteData.description} />
 
-  <Section>
-    
+  <Section
+  backgroundMedia={{
+    image: {
+      src: HeroBg,
+      imageClass: "filter bg-cover bg-center",
+    },
+  }}
+  sectionClass="min-h-[150vh] md:min-h-[150vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
+  >
+
   </Section>
 
   <!-- Clients -->
