--- a/src/components/Forms/ContactForm.astro
+++ b/src/components/Forms/ContactForm.astro
@@ -5,7 +5,7 @@ import Textarea  from "@/components/Forms/Inputs/Textarea.astro";
 import { getCurrentEntryId } from "@/utils/CurrentEntry";
 
 const {
-  inputClasses   = "border border-[var(--color-border)] transition-default p-[var(--spacing-md)] w-full bg-bg placeholder:text-[var(--color-text)] text-text outline-none",
+  inputClasses   = "border border-[var(--color-border)] transition-default p-[var(--spacing-sm)] w-full bg-bg placeholder:text-[var(--color-text)] text-text outline-none",
   wrapperClasses = "mb-[var(--spacing-sm)] w-full",
 } = Astro.props;
 
