--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,8 @@ import Section from "@/components/Section.astro";
 import PrimaryHero from "@/components/StaticSections/PrimaryHero.astro";
 import HeroBg from "@/assets/background.svg";
 import { SiteData } from "@/content/SiteData";
+import { Image } from "astro:assets";
+import SolarTrustTeam from "@/assets/Solar-Trust-Team.webp";
 ---
 <ExtendedLayout title="Welcome to Astro!" description="Your gateway to amazing projects.">
   <!-- Hero Section -->
@@ -13,15 +15,25 @@ import { SiteData } from "@/content/SiteData";
   <Section
   backgroundMedia={{
     image: {
-      src: HeroBg,
+      src: SolarTrustTeam,
       imageClass: "filter bg-cover bg-center",
     },
   }}
-  sectionClass="min-h-[150vh] md:min-h-[150vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
+  sectionClass="min-h-[100vh] md:min-h-[100vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
   >
-
+  <!-- <Image
+  src={SolarTrustTeam}
+  alt="Solar Trust Team"
+  class="w-full h-full object-cover"
+  width={320}
+  height={320}
+  sizes="(max-width: 768px) 160px, 320px"
+  loading="lazy"
+  decoding="async"
+  quality={60}
+  fetchpriority="low"
+/> -->
   </Section>
-
   <!-- Clients -->
   <Section
     sectionClass="animate-on-appear"
