--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import HeroBg from "@/assets/background.svg";
 import { SiteData } from "@/content/SiteData";
 import { Image } from "astro:assets";
 import SolarTrustTeam from "@/assets/Solar-Trust-Team.webp";
+import SolarPanels from "@/assets/solar-cell.jpg";
 ---
 <ExtendedLayout title="Welcome to Astro!" description="Your gateway to amazing projects.">
   <!-- Hero Section -->
@@ -15,9 +16,10 @@ import SolarTrustTeam from "@/assets/Solar-Trust-Team.webp";
   <Section
   backgroundMedia={{
     image: {
-      src: SolarTrustTeam,
-      imageClass: "filter bg-cover bg-center",
+      src: SolarPanels,
+      imageClass: "opacity-80 filter brightness-50 bg-cover bg-center xl:bg-fixed",
     },
+    // overlayClass: "opacity-60 filter brightness-50 bg-cover bg-center xl:bg-fixed",
   }}
   sectionClass="min-h-[100vh] md:min-h-[100vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
   >
