solar trust page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,8 @@ const MainNavMenu = [
 
 const breakpoint = "lg";
 ---
-<header class="sticky top-0 bg-bg shadow-xl flex justify-between items-center p-[var(--spacing-sm)] sticky top-0 z-[99999]">
+<header class="sticky top-0 bg-bg shadow-xl flex justify-center items-center sticky top-0 z-[99999]">
+  <div class="head-foot-container">
   <a href="/" class="flex items-center">
     <Image
       src={SiteData.logo.src}
@@ -27,10 +28,6 @@ const breakpoint = "lg";
       fetchpriority="high"
       aria-hidden="true"
     />
-    <!-- <div class="header-text" aria-label="Site identity">
-      <div class="text-xl font-bold">{SiteData.title}</div>
-      <div class="text-sm">{SiteData.tagline}</div>
-    </div>     -->
   </a>
 
   <div class="header-right flex flex-row-reverse lg:flex-row justify-center items-center gap-[var(--spacing-sm)]">
@@ -64,7 +61,7 @@ const breakpoint = "lg";
     </a>
   
   </div>
-
+</div>
   </div>
   
 
