--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,9 @@
 ---
 import { buildMenuQueries } from "@/utils/ArrayQueryUtils";
 import Menu from "./Menu/BarMenu/NavMenu.astro";
+import { SiteData } from "@/content/SiteData";
+import { Image } from "astro:assets";
+import OrangeBGLogo from "@/assets/solartrustwhite.png"
 
 const FooterMenu = [
   { id: "privacy", label: "Privacy Policy", slug: "/privacy-policy", weight: 10 },
@@ -8,9 +11,23 @@ const FooterMenu = [
   { id: "contact", label: "Contact Us", slug: "/contact-us", weight: 30 },
 ];
 ---
-<footer class="p-[var(--spacing-md)]">
-  <Menu items={await buildMenuQueries({ FooterMenu })} />
-  <p class="mt-[var(--spacing-md)] text-[var(--font-size-sm)]">
+<footer class="bg-primary text-center flex justify-center items-center">
+  <div class="head-foot-container">
+  <a href="/" class="flex items-center justify-center">
+    <Image
+      src={OrangeBGLogo}
+      alt={`${SiteData.title} logo`}
+      class="h-auto w-50 hover:scale-105 transition-transform duration-300"
+      format="webp"
+      loading="eager"
+      quality="low"
+      fetchpriority="high"
+      aria-hidden="true"
+    />
+  </a>
+  <p class="text-[var(--font-size-sm)] m-0 p-0">
     &copy; {new Date().getFullYear()} Cleanomatic. All rights reserved.
   </p>
+  <!-- <Menu items={await buildMenuQueries({ FooterMenu })} /> -->
+</div>
 </footer>
