--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,42 +7,89 @@ import HeroBg from "@/assets/background.svg";
 import { SiteData } from "@/content/SiteData";
 import { Image } from "astro:assets";
 import SolarTrustTeam from "@/assets/Solar-Trust-Team.webp";
+import Owner from "@/assets/paul.jpeg";
 import SolarPanels from "@/assets/solar-cell.jpg";
+import Heading from "@/components/Heading";
 ---
-<ExtendedLayout title="Welcome to Astro!" description="Your gateway to amazing projects.">
+
+<ExtendedLayout
+  title="Welcome to Astro!"
+  description="Your gateway to amazing projects."
+>
   <!-- Hero Section -->
   <PrimaryHero title={SiteData.title} description={SiteData.description} />
 
   <Section
-  backgroundMedia={{
-    image: {
-      src: SolarPanels,
-      imageClass: "opacity-80 filter brightness-50 bg-cover bg-center xl:bg-fixed",
-    },
-    // overlayClass: "opacity-60 filter brightness-50 bg-cover bg-center xl:bg-fixed",
-  }}
-  sectionClass="min-h-[100vh] md:min-h-[100vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
+    heading={[
+      {
+        text: "Paul Montemurno",
+        tagName: "h2",
+        class: "h4 font-bold text-bg",
+      },
+      {
+        text: "Owner and Founder",
+        tagName: "h6",
+        class: "h6 font-thin text-bg",
+      },
+    ]}
+    ,
+    description=`"At ${SiteData.title}, our mission is to prioritize you. When you choose to work with us, you’re not just another client—you’re part of our family. Unlike many companies tied to specific solar installers, we work solely for your best interests. We fight to secure the highest-quality products at the most competitive prices and make sure the process is smooth and stress-free every step of the way. From the first consultation to turning on your solar system, we’ll be by your side, ready to answer any question or resolve any issue. With us, you're never on your own—just call, and we’re here to help."`
+    descriptionClass="lg:w-3/5 w-full text-bg lg:text-center text-justify text-2xl italic"
+    headingAreaClass="flex flex-col items-center justify-center text-center gap-[var(--spacing-xs)]"
+    childPlacement="top-content-section"
+    ,
+    backgroundMedia={{
+      image: {
+        src: SolarPanels,
+        imageClass:
+          "opacity-80 filter brightness-50 bg-cover bg-center xl:bg-fixed",
+      },
+      // overlayClass: "opacity-60 filter brightness-50 bg-cover bg-center xl:bg-fixed",
+    }}
+    sectionClass="min-h-[100vh] md:min-h-[125vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
+    contentClass="flex flex-col-reverse"
   >
-  <!-- <Image
-  src={SolarTrustTeam}
-  alt="Solar Trust Team"
-  class="w-full h-full object-cover"
-  width={320}
-  height={320}
-  sizes="(max-width: 768px) 160px, 320px"
-  loading="lazy"
-  decoding="async"
-  quality={60}
-  fetchpriority="low"
-/> -->
+    <div
+      class="quotation text-[200px] leading-none flex justify-center items-center p-0 m-0"
+    >
+      "
+    </div>
+    <div class="founder flex justify-center items-center flex-col">
+      <Image
+        src={Owner}
+        alt="Solar Trust Team"
+        class="rounded-full w-25 h-25 object-cover my-[var(--spacing-sm)]"
+        width={120}
+        height={120}
+        sizes="120px"
+        loading="lazy"
+        decoding="async"
+        quality={60}
+        fetchpriority="low"
+      />
+    </div>
   </Section>
-  <!-- Clients -->
+
   <Section
+    sectionClass="text-center flex justify-center min-h-[50vh] items-center flex-col gap-[var(--spacing-lg)]"
+    headingAreaClass="w-full flex justify-center flex-col items-center gap-[var(--spacing-lg)]"
+    heading={{ text: "Take your first step towards solar.", tagName: "h2", class: "h2 font-bold text-primary" }}
+    description="We would love to sit down with you and help you explore your options. In a 60-minute meeting we could help you discover if solar is a good fit for you and your home, and see how much solar could save you. A consulation is FREE of charge and has no strings attached."
+    descriptionClass="lg:w-3/5 w-full text-bg-dark lg:text-center text-justify"
+    buttons={[
+      {
+      text: "Book a Consultation",
+      link: "/contact-us",
+      class: "btn-primary",
+      }
+    ]}
+  ></Section>
+
+  <!-- Clients -->
+  <!-- <Section
     sectionClass="animate-on-appear"
     collection="clients"
     query="getAll"
     heading={{ text: "Our Clients", tagName: "h2" }}
-  />
-
-
+  /> -->
 </ExtendedLayout>
