--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,12 +5,12 @@
 @theme {
   /* Colors */
   --color-bg: #ffffff;
+  --color-bg2: #f9eee5;
   --color-bg-dark: #2b2b2b;
   --color-text: rgba(112,112,112,0.83);
   --color-heading: #ffff;
   --color-primary: #ff6100;
-  --color-secondary: #f43f5e;
-  --color-accent: #10b981;
+  --color-secondary: #ff795e;
   --color-neutral: #f3f4f6;
   
   /* Typography */
@@ -18,8 +18,8 @@
   --font-heading: 'Poppins', sans-serif;
   
   /* Spacing tokens */
-  --spacing-xs: 0.5rem;
-  --spacing-sm: 0.7rem;
+  --spacing-xs: 0.3rem;
+  --spacing-sm: 0.6rem;
   --spacing-md: 1.2rem;
   --spacing-lg: 1.7rem;
   --spacing-xl: 2.5rem;
@@ -59,12 +59,16 @@ body {
   padding: var(--spacing-md);
 }
 
+.head-foot-container {
+  @apply w-19/20 text-bg flex justify-between items-center p-[var(--spacing-sm)];
+}
+
 /* Global header styles (these are our dynamic header classes) */
 .h1 {
   @apply text-3xl lg:text-5xl font-bold;
 }
 .h2 {
-  @apply text-3xl lg:text-4xl font-semibold;
+  @apply text-3xl lg:text-5xl font-semibold;
 }
 .h3 {
   @apply text-xl lg:text-2xl font-semibold md:text-2xl;
@@ -79,7 +83,7 @@ body {
   @apply text-base font-medium md:text-lg;
 }
 p {
-    @apply mb-4 leading-relaxed font-thin text-base capitalize;
+    @apply mb-4 leading-relaxed font-thin text-base capitalize text-text;
   }
 }
 
