--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,7 +47,7 @@ import Heading from "@/components/Heading";
       // overlayClass: "opacity-60 filter brightness-50 bg-cover bg-center xl:bg-fixed",
     }}
     sectionClass="min-h-[100vh] md:min-h-[125vh] flex items-center justify-center z-100 text-bg bg-[#2b2b2b] text-center"
-    contentClass="flex flex-col-reverse"
+    contentClass="flex flex-col-reverse content-container"
   >
     <div
       class="quotation text-[200px] leading-none flex justify-center items-center p-0 m-0"
@@ -72,6 +72,7 @@ import Heading from "@/components/Heading";
 
   <Section
     sectionClass="text-center flex justify-center min-h-[50vh] items-center flex-col gap-[var(--spacing-lg)]"
+    contentClass="content-container"
     headingAreaClass="w-full flex justify-center flex-col items-center gap-[var(--spacing-lg)]"
     heading={{ text: "Take your first step towards solar.", tagName: "h2", class: "h2 font-bold text-primary" }}
     description="We would love to sit down with you and help you explore your options. In a 60-minute meeting we could help you discover if solar is a good fit for you and your home, and see how much solar could save you. A consulation is FREE of charge and has no strings attached."
