solar trust phone back

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@ const FooterMenu = [
 ];
 ---
 <footer class="bg-primary text-center flex justify-center items-center">
-  <div class="head-foot-container">
+  <div class="head-foot-container flex flex-col lg:flex-row gap-[var(--spacing-sm)] lg:gap-0">
   <a href="/" class="flex items-center justify-center">
     <Image
       src={OrangeBGLogo}
