solar trust phone back

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,7 +81,7 @@ import Heading from "@/components/Heading";
   </Section>
 
   <Section
-    sectionClass="text-center flex justify-center min-h-[50vh] items-center flex-col gap-[var(--spacing-lg)]"
+    sectionClass="text-center flex justify-center min-h-[100vh] lg:min-h-[50vh] items-center flex-col gap-[var(--spacing-lg)]"
     contentClass="content-container"
     headingAreaClass="w-full flex justify-center flex-col items-center gap-[var(--spacing-lg)]"
     heading={{
