--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ const MainNavMenu = [
 
 const breakpoint = "lg";
 ---
-<header class="sticky top-0 bg-bg shadow-xl flex justify-center items-center sticky top-0 z-[99999]">
+<header class="sticky top-0 bg-bg shadow-xl flex justify-center items-center z-[99999]">
   <div class="head-foot-container">
   <a href="/" class="flex items-center">
     <Image
