--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,9 +36,9 @@ const breakpoint = "lg";
     breakpoint={breakpoint} 
     listClass="flex flex-row"
     barMenu={{
-      menuItem: { component: MenuItem, class: "menu-item" },
+      menuItem: { component: MenuItem, class: "menu-item text-heading" },
       submenuItem: { component: MenuItem, class: "submenu-class bg-bg z-[999999]" },
-      listClass: "flex gap-[var(--spacing-md)]"
+      listClass: "flex gap-[var(--spacing-md)] uppercase font-thin"
     }}
     hamburgerMenu={{
       hamburgerIconClass: "custom-hamburger-icon text-primary",
