--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -86,7 +86,7 @@ import Heading from "@/components/Heading";
   <Section
     sectionClass="flex justify-center min-h-[80vh] lg:min-h-[50vh] items-center flex-col gap-[var(--spacing-lg)]"
     contentClass="flex justify-center items-center flex-col-reverse lg:flex-row py-[var(--spacing-xl)] w-8/10"
-    topContentClass="py-[var(--spacing-lg)] lg:w-2/3"
+    topContentClass="py-[var(--spacing-lg)] lg:w-2/3 text-center lg:text-left"
     headingAreaClass="flex justify-center flex-col items-start gap-[var(--spacing-sm)]"
     heading={{
       text: "Take your first step towards solar.",
@@ -94,8 +94,8 @@ import Heading from "@/components/Heading";
       class: "h2 font-bold text-primary",
     }}
     description="We would love to sit down with you and help you explore your options. In a 60-minute meeting we could help you discover if solar is a good fit for you and your home, and see how much solar could save you. A consulation is FREE of charge and has no strings attached."
-    descriptionClass="lg:w-5/6 w-full text-bg-dark text-left"
-    buttonsSectionClass="flex flex-col justify-center items-start mt-[var(--spacing-sm)]"
+    descriptionClass="lg:w-5/6 w-full text-bg-dark"
+    buttonsSectionClass="flex flex-col justify-center items-center lg:items-start mt-[var(--spacing-sm)]"
     buttonsPlacement="top-content-section"
     buttons={[
       {
