--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,7 +36,7 @@ const breakpoint = "lg";
     breakpoint={breakpoint} 
     listClass="flex flex-row"
     barMenu={{
-      menuItem: { component: MenuItem, class: "menu-item text-heading" },
+      menuItem: { component: MenuItem, class: "menu-item px-[var(--spacing-sm)] text-heading" },
       submenuItem: { component: MenuItem, class: "submenu-class bg-bg z-[999999]" },
       listClass: "flex gap-[var(--spacing-md)] uppercase font-thin"
     }}
