--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,6 +33,7 @@ import LogoLoop from "@/components/LoopComponents/LogoLoop.astro";
     }}
   >
     <Section
+      sectionClass="flex justify-center items-center gap-[var(--spacing-lg)]"
       contentClass="flex flex-col-reverse items-center justify-center content-container"
       heading={[
         {
